@@ -1,34 +1,69 @@
 package dev.jbang.cli;
 
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
-import dev.jbang.source.*;
+import org.aesh.command.option.Mixin;
+import org.aesh.command.option.Option;
 
-import picocli.CommandLine;
+import dev.jbang.devkitman.Jdk;
+import dev.jbang.devkitman.JdkManager;
+import dev.jbang.source.Project;
+import dev.jbang.source.ProjectBuilder;
 
 public abstract class BaseBuildCommand extends BaseCommand {
 
-	@CommandLine.Mixin
+	@Mixin
 	ScriptMixin scriptMixin;
 
-	@CommandLine.Mixin
+	@Mixin
 	BuildMixin buildMixin;
 
-	@CommandLine.Mixin
+	@Mixin
 	DependencyInfoMixin dependencyInfoMixin;
 
-	@CommandLine.Mixin
+	@Mixin
 	NativeMixin nativeMixin;
 
-	@CommandLine.Option(names = {
-			"--build-dir" }, description = "Use given directory for build results")
-	Path buildDir;
+	@Mixin
+	JdkProvidersMixin jdkMixin;
 
-	@CommandLine.Option(names = { "--enable-preview" }, description = "Activate Java preview features")
+	@Option(name = "build-dir", description = "Use given directory for build results")
+	String buildDirStr;
+
+	@Option(name = "enable-preview", hasValue = false, description = "Activate Java preview features")
 	Boolean enablePreviewRequested;
 
+	@Override
+	public void afterParse() {
+		super.afterParse();
+		if (buildMixin.javaVersion != null && !buildMixin.javaVersion.matches("\\d+[+]?")) {
+			throw new ExitException(EXIT_INVALID_INPUT,
+					String.format(
+							"Invalid value for '--java': '%s' should be a number optionally followed by a plus sign",
+							buildMixin.javaVersion));
+		}
+		dependencyInfoMixin.applyIgnoreTransitiveRepositories();
+	}
+
+	protected JdkManager getJdkManager() {
+		return jdkMixin.getJdkManager();
+	}
+
+	public Jdk getProjectJdk(Project project) {
+		Jdk jdk = project.projectJdk();
+		if (buildMixin.javaVersion != null) {
+			jdk = getJdkManager().getOrInstallJdk(buildMixin.javaVersion);
+		}
+		return jdk;
+	}
+
+	protected Path getBuildDir() {
+		return buildDirStr != null ? Paths.get(buildDirStr) : null;
+	}
+
 	protected ProjectBuilder createBaseProjectBuilder() {
-		return Project
+		return dev.jbang.source.Project
 			.builder()
 			.setProperties(dependencyInfoMixin.getProperties())
 			.additionalDependencies(dependencyInfoMixin.getDependencies())
@@ -36,7 +71,7 @@ public abstract class BaseBuildCommand extends BaseCommand {
 			.additionalClasspaths(dependencyInfoMixin.getClasspaths())
 			.additionalSources(scriptMixin.sources)
 			.additionalResources(scriptMixin.resources)
-			.forceType(scriptMixin.forceType)
+			.forceType(scriptMixin.getForceType())
 			.catalog(scriptMixin.catalog)
 			.javaVersion(buildMixin.javaVersion)
 			.moduleName(buildMixin.module)
@@ -44,10 +79,10 @@ public abstract class BaseBuildCommand extends BaseCommand {
 			.manifestOptions(buildMixin.manifestOptions)
 			.nativeImage(nativeMixin.nativeImage)
 			.nativeOptions(nativeMixin.nativeOptions)
-			.integrations(buildMixin.integrations)
+			.integrations(buildMixin.getIntegrations())
 			.enablePreview(enablePreviewRequested)
-			.jdkManager(buildMixin.jdkProvidersMixin.getJdkManager());
+			.jdkManager(getJdkManager());
 
-		// NB: Do not put `.mainClass(buildMixin.main)` here
+		// NB: Do not put .mainClass(main) here
 	}
 }
